# llm-mcp-tooling

./: .dockerignore  .gitignore  Dockerfile.evaluation  Dockerfile.external-api  Dockerfile.summarization  USAGE_GUIDE.md  docker-compose.yml  example  pyproject.toml  pytest.ini  requirements.txt
app/: logging_config.py  main.py
app/llm/: __init__.py  gemini_client.py
app/llm/interfaces/: llm_client.py
app/llm_invocation_layer/: invoke_llm.py  llm_invocation_prompt.py  llm_invocation_with_agent.py  llm_invocation_without_agent.py  tool_function_definitions.py  tool_wrappers.py
app/tools/: __init__.py
app/tools/detect_language/: __init__.py  detect_laguage_service.py  detect_language.py  detect_language_schema.py
app/tools/evaluate_llm/: __init__.py  evaluate_llm_responses.py  evaluate_llm_responses_schema.py  evaluate_llm_service_responses.py
app/tools/extract_pdf_text/: PDF_extraction_service.py  PDF_source_loader.py  PDF_text_extractor.py  __init__.py  extract_pdf_schema.py  extract_pdf_text.py
app/tools/fetch_exchange_rate/: __init__.py  fetch_exchange_rate.py  fetch_exchange_rate_schema.py  fetch_exchange_rate_service.py
app/tools/fetch_weather/: __init__.py  fetch_weather_schema.py  (+2 more)
app/utils/: __init__.py  chunker.py  lang_chunking.py
mcp_client/: __main__.py  mcp_client.py  servers_config.json
mcp_servers/: README.md  evaluation_server.py  external_api_server.py  summarization_server.py
tests/: conftest.py  mcp_client.py  test_invalid_tool_response.py  test_missing_or_empty_content.py  test_summarize_pdf.py  test_wikipedia_summarization.py
(+24 files in other folders)
